--- a/project1/polls/templates/index.html
+++ b/project1/polls/templates/index.html
@@ -22,6 +22,11 @@
         <input type="submit">
     </form>
 </div>
+<div>
+    {% if response %}
+        <p> {{ response }}</p>
+    {% endif %}
+</div>
 
 </body>
 <script>
