--- a/project1/polls/templates/Style.css
+++ b/project1/polls/templates/Style.css
@@ -1,53 +1,83 @@
+* {
+    box-sizing: border-box;
+}
+
 header {
     background-color: black;
     color: white;
+    padding: 15px;
 }
-
-section {
-    width: 60%;
-    margin: 20px auto;}
 
 h3 {
+    color: white;
     font-family: 'Open Sans', sans-serif;
-    font-size: 120px;
+    font-size: 110px;
     margin: 0px;
-    text-align: center;
     padding-bottom: 20px;
+    text-align: center;
 }
+
 label{
     font-family: 'Arimo', sans-serif;
     font-size: 20px;
-    padding: 10px;
-    margin-top: 20px;
-    margin-bottom: 10px;}
+}
 
 input[type=text] {
-    width: 735px;
-    padding: 10px;
+    border: 1px solid black;
+    display: block;
     font-family: 'Arimo', sans-serif;
     font-size: 16px;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    padding: 10px;
+    margin: 20px auto auto auto;
+    width: 90%;
 }
 
 input[type=radio] {
-    width: 2em;
     height: 2em;
+    width: 2em;
 }
 
 input[type=submit] {
-      background-color: black;
-      cursor: pointer;
-      color: white;
-      font-size:20px;
-      font-family: 'Arimo', sans-serif;
-      line-height: 1.2;
-      padding: 10px;
-      width: 300px;
-      margin-top: 20px;
+    background-color: black;
+    cursor: pointer;
+    color: white;
+    display: block;
+    font-size:20px;
+    font-family: 'Arimo', sans-serif;
+    line-height: 1.2;
+    margin: auto auto 20px auto;
+    padding: 10px;
+    width: 90%;
 }
 
-legend {
+p{
+    font-size: 18px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    margin: auto;
+    text-align: left;
+    width: 90%;
+}
+
+footer {
+    background-color: black;
+    color: white;
     font-family: 'Arimo', sans-serif;
-    font-size: 30px;
+    font-size: 12px;
+    padding: 10px;
+    text-align: center;
+    margin-top: 15px;
+}
+
+#form, #results{
+    border: 1px solid black;
+    display: block;
+    margin: 20px auto auto auto;
+    width: 80%;
+}
+
+#radio{
+    display: block;
+    margin: auto auto 20px auto;
+    width: 90%;
 }
