--- a/project1/polls/templates/index.html
+++ b/project1/polls/templates/index.html
@@ -4,7 +4,93 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="Style1.css">
     <link href="https://fonts.googleapis.com/css?family=Arimo|Open+Sans:600i" rel="stylesheet">
-    <title>Open Search Application</title>
+    <title>Open Search Application</title
+        <style>
+        * {
+    box-sizing: border-box;
+}
+
+header {
+    background-color: black;
+    color: white;
+    padding: 15px;
+}
+
+h3 {
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 110px;
+    margin: 0px;
+    padding-bottom: 20px;
+    text-align: center;
+}
+
+label{
+    font-family: 'Arimo', sans-serif;
+    font-size: 20px;
+}
+
+input[type=text] {
+    border: 1px solid black;
+    display: block;
+    font-family: 'Arimo', sans-serif;
+    font-size: 16px;
+    padding: 10px;
+    margin: 20px auto auto auto;
+    width: 90%;
+}
+
+input[type=radio] {
+    height: 2em;
+    width: 2em;
+}
+
+input[type=submit] {
+    background-color: black;
+    cursor: pointer;
+    color: white;
+    display: block;
+    font-size:20px;
+    font-family: 'Arimo', sans-serif;
+    line-height: 1.2;
+    margin: auto auto 20px auto;
+    padding: 10px;
+    width: 90%;
+}
+
+p{
+    font-size: 18px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    margin: auto;
+    text-align: left;
+    width: 90%;
+}
+
+footer {
+    background-color: black;
+    color: white;
+    font-family: 'Arimo', sans-serif;
+    font-size: 12px;
+    padding: 10px;
+    text-align: center;
+    margin-top: 15px;
+}
+
+#form, #results{
+    border: 1px solid black;
+    display: block;
+    margin: 20px auto;
+    width: 80%;
+}
+
+#radio{
+    display: block;
+    margin: 5px auto 25px;
+    width: 90%;
+}
+
+        </style>
 </head>
 <body>
     <header id="title">
