--- a/project1/polls/templates/index.html
+++ b/project1/polls/templates/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="Style1.css">
     <link href="https://fonts.googleapis.com/css?family=Arimo|Open+Sans:600i" rel="stylesheet">
-    <title>Open Search Application</title
+    <title>Open Search Application</title>
         <style>
         * {
     box-sizing: border-box;
